Fixed column alignments and consistency issues.

--- a/sass/inner.scss
+++ b/sass/inner.scss
@@ -15,6 +15,7 @@
     &-row {
       padding-top: 5%;
       padding-bottom: 2%;
+      // margin: 0 auto;
     }
   }
   .center {
@@ -77,8 +78,6 @@
     &-item {
       font-size: 0.9em;
       display: inline-block;
-      padding-left: 1%;
-      padding-right: 1%;
       text-align: left;
       vertical-align: text-top;
     }
@@ -101,9 +100,10 @@
   .pull {
     &-quote {
       color: $block-quote;
+      font-size: 20pt;
+      text-transform: none;
       &-box {
-        padding-bottom: 3%;
-        // padding-left: 15%;
+        padding-bottom: 2%;
       }
     }
   }
